--- a/ios-assessment/Screens/Details/DetailsViewController.storyboard
+++ b/ios-assessment/Screens/Details/DetailsViewController.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,16 +18,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="t63-uB-Do5">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="754"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vqu-dt-5Rr">
+                                <rect key="frame" x="12" y="810" width="390" height="40"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="4tP-yZ-Uhs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Book the movie">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="radius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="bookMovieAction:" destination="sgv-te-F7t" eventType="touchUpInside" id="hnc-e8-V9J"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PiR-qn-mjv"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="PiR-qn-mjv" firstAttribute="bottom" secondItem="t63-uB-Do5" secondAttribute="bottom" id="Iac-DV-huO"/>
+                            <constraint firstItem="Vqu-dt-5Rr" firstAttribute="top" secondItem="t63-uB-Do5" secondAttribute="bottom" constant="12" id="5OX-DW-eu5"/>
                             <constraint firstItem="t63-uB-Do5" firstAttribute="leading" secondItem="PiR-qn-mjv" secondAttribute="leading" id="XbD-5Z-qav"/>
+                            <constraint firstItem="Vqu-dt-5Rr" firstAttribute="leading" secondItem="PiR-qn-mjv" secondAttribute="leading" constant="12" id="YR5-zS-Cou"/>
                             <constraint firstItem="PiR-qn-mjv" firstAttribute="trailing" secondItem="t63-uB-Do5" secondAttribute="trailing" id="cRr-nO-gL6"/>
+                            <constraint firstItem="PiR-qn-mjv" firstAttribute="trailing" secondItem="Vqu-dt-5Rr" secondAttribute="trailing" constant="12" id="oYa-HB-92U"/>
+                            <constraint firstItem="PiR-qn-mjv" firstAttribute="bottom" secondItem="Vqu-dt-5Rr" secondAttribute="bottom" constant="12" id="tfM-6s-TuU"/>
                             <constraint firstItem="t63-uB-Do5" firstAttribute="top" secondItem="PiR-qn-mjv" secondAttribute="top" id="vU6-3x-Hko"/>
                         </constraints>
                     </view>
@@ -39,4 +62,9 @@
             <point key="canvasLocation" x="238" y="-267"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
